--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "spatie/data-transfer-object": "^3.9",
-        "spatie/laravel-data": "^4.17"
+        "spatie/data-transfer-object": "^3.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
